# SerialBridgeCollector

./: .gitmodules  CMakeLists.txt
include/: sqlite3-log.hpp
src/: main.cpp  sqlite3-log.cpp
